# ffld2

./: .gitignore  CMakeLists.txt  HOGPyramid.cpp  JPEGImage.cpp  Mixture.cpp  Mixture.h  Model.cpp  Patchwork.cpp  Patchwork.h  README.md  README.txt  Scene.cpp  Scene.h  test.cpp  testlib.cpp
cmake/: FindFFTW.cmake
lib/: ffld2.cpp  ffld2.h
models/: headhunter_dpm_baseline.txt
python/: ffld2.py
